--- a/app/src/main/res/layout/frag_pt_pickup_calander.xml
+++ b/app/src/main/res/layout/frag_pt_pickup_calander.xml
@@ -22,9 +22,20 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyVTime"
-            android:layout_below="@+id/calendarView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+
+            android:layout_below="@+id/calendarView" />
+
+
+        <Button
+            android:id="@+id/btn_SaveAppointment"
+            style="@style/general_button_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/recyVTime"
+            android:layout_marginTop="@dimen/margin_def"
+            android:text="Save" />
         <!--<LinearLayout
             android:gravity="center_horizontal"
             android:id="@+id/btnLayout"
@@ -140,15 +151,15 @@
 
             </LinearLayout>
         </LinearLayout>-->
-<!--
-        <Button
-            android:layout_marginTop="@dimen/margin_def"
-            android:id="@+id/btn_5"
-            style="@style/general_button_style"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/btnLayout"
-            android:text="Save" />-->
+        <!--
+                <Button
+                    android:layout_marginTop="@dimen/margin_def"
+                    android:id="@+id/btn_5"
+                    style="@style/general_button_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/btnLayout"
+                    android:text="Save" />-->
 
         <!--    <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyVLocationSearch"
