--- a/app/src/main/res/layout/list_row_doctor_time_sch.xml
+++ b/app/src/main/res/layout/list_row_doctor_time_sch.xml
@@ -1,74 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="5dp"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="1dp">
 
-    <RelativeLayout
+    android:background="@drawable/border_edt1_text">
+
+
+    <ImageView
+        android:id="@+id/lr_iv_ClickButton"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/ic_radio_button_unchecked_black_24dp" />
+
+    <TextView
+        android:id="@+id/lr_tv_DocTime"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_toEndOf="@+id/lr_iv_ClickButton"
+        android:layout_toRightOf="@+id/lr_iv_ClickButton"
 
-        <!--<de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/profile_image"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:src="@drawable/profile"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#FF000000"/>-->
+        android:text="Dr. Faisal Khali kjkdsjfl"
 
+        android:textSize="15sp" />
 
-        <ImageView
-            android:id="@+id/lr_iv_DocImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="11dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
-            app:srcCompat="@android:drawable/checkbox_off_background" />
+    <!--    <ImageView
+            android:id="@+id/lr_iv_DocAvailableStatus"
+            android:layout_width="@dimen/doc_availableStatus_width"
+            android:layout_height="@dimen/doc_availableStatus_height"
+            android:layout_alignEnd="@+id/lr_iv_DocImage"
+            android:layout_below="@+id/lr_iv_DocImage"
+            android:layout_marginEnd="11dp"
+            android:layout_marginTop="10dp"
+            app:srcCompat="@drawable/ic_offline" />-->
 
-        <TextView
-            android:id="@+id/lr_tv_DocTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/lr_iv_DocImage"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_toEndOf="@+id/lr_iv_DocImage"
-            android:layout_toRightOf="@+id/lr_iv_DocImage"
-            android:layout_toStartOf="@+id/imageView3"
-            android:text="Dr. Faisal Khali kjkdsjfl"
+    <!--   <TextView
+           android:id="@+id/lr_tv_docRating"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_alignEnd="@+id/imageView3"
+           android:layout_below="@+id/lr_tv_DocName"
+           android:text="@string/_30" />-->
 
-            android:textSize="15sp" />
-
-        <!--    <ImageView
-                android:id="@+id/lr_iv_DocAvailableStatus"
-                android:layout_width="@dimen/doc_availableStatus_width"
-                android:layout_height="@dimen/doc_availableStatus_height"
-                android:layout_alignEnd="@+id/lr_iv_DocImage"
-                android:layout_below="@+id/lr_iv_DocImage"
-                android:layout_marginEnd="11dp"
-                android:layout_marginTop="10dp"
-                app:srcCompat="@drawable/ic_offline" />-->
-
-        <!--   <TextView
-               android:id="@+id/lr_tv_docRating"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_alignEnd="@+id/imageView3"
-               android:layout_below="@+id/lr_tv_DocName"
-               android:text="@string/_30" />-->
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
-<!--
+</RelativeLayout><!--
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
