--- a/app/src/main/res/layout/doc_activity_home.xml
+++ b/app/src/main/res/layout/doc_activity_home.xml
@@ -14,6 +14,9 @@
         android:layout_height="match_parent" />
 
     <android.support.design.widget.NavigationView
+        app:itemTextColor="@color/white"
+        app:itemIconTint="@color/white"
+        android:background="@color/colorPrimary"
         android:id="@+id/doc_nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
