--- a/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
+++ b/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="10dp"
         android:elevation="2dp"
         app:cardBackgroundColor="@color/white"
-        app:cardElevation="3dp"
+        app:cardElevation="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvLabel">
@@ -52,7 +52,8 @@
             android:lines="8"
             android:maxLines="10"
             android:minLines="6"
-            android:scrollbars="vertical" />
+            android:scrollbars="vertical"
+            android:textSize="12sp" />
 
     </android.support.v7.widget.CardView>
 
@@ -64,38 +65,46 @@
         android:layout_margin="@dimen/margin_def"
         android:layout_marginTop="20dp"
         android:background="@color/white"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardElevation="1dp"
         app:cardUseCompatPadding="true"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cv">
 
         <RelativeLayout
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp">
 
             <TextView
-
+                android:gravity="center_vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
+
                 android:text="@string/pick_time_n_date"
                 android:textColor="@color/gray" />
 
             <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
                 android:background="@drawable/ic_menu_pickup_date_range" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_def"
         android:layout_marginTop="20dp"
         android:background="@color/white"
+        android:visibility="gone"
+        app:cardElevation="1dp"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,14 +117,14 @@
 
             <TextView
 
-                android:padding="@dimen/padding_def"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:padding="@dimen/padding_def"
                 android:text=""
                 android:textColor="@color/colorPrimary" />
 
-             </RelativeLayout>
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
     <Button
