--- a/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
+++ b/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
@@ -25,7 +25,7 @@
         android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="@dimen/margin_def"
         android:layout_marginTop="10dp"
         android:elevation="2dp"
         app:cardBackgroundColor="@color/white"
@@ -68,7 +68,7 @@
         android:clickable="true"
         android:focusable="true"
         app:cardElevation="1dp"
-        app:cardUseCompatPadding="true"
+
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,14 +77,15 @@
         <RelativeLayout
             android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:padding="5dp">
 
             <TextView
-                android:gravity="center_vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
                 android:text="@string/pick_time_n_date"
                 android:textColor="@color/gray" />
 
