--- a/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
+++ b/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
@@ -81,19 +81,22 @@
             android:padding="5dp">
 
             <TextView
+                android:textSize="12sp"
+                android:layout_marginLeft="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
+                android:layout_toStartOf="@+id/imageView5"
                 android:text="@string/pick_time_n_date"
                 android:textColor="@color/gray" />
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
                 android:layout_alignParentEnd="true"
-                android:background="@drawable/ic_menu_pickup_date_range" />
+                android:background="@drawable/ic_menu_pickup_date_range"
+                android:id="@+id/imageView5" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
