pickuptime layout fix

--- a/app/src/main/res/drawable-xhdpi/border_edt1_text.xml
+++ b/app/src/main/res/drawable-xhdpi/border_edt1_text.xml
@@ -3,5 +3,5 @@
 
     <stroke
         android:width=".3dp"
-        android:color="@color/black"/>
+        android:color="@color/gray_light"/>
 </shape>
