--- a/app/src/main/res/layout/frag_pt_pickup_calander.xml
+++ b/app/src/main/res/layout/frag_pt_pickup_calander.xml
@@ -6,13 +6,16 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
         <!--  <include
               android:id="@+id/toolbar"
               layout="@layout/appbar_layout" />-->
 
         <CalendarView
+            android:background="#eeeeee"
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="300dp"
@@ -21,6 +24,7 @@
 
 
         <android.support.v7.widget.RecyclerView
+            android:layout_marginTop="20dp"
             android:id="@+id/recyVTime"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -35,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/recyVTime"
             android:layout_marginTop="@dimen/margin_def"
+            android:layout_marginBottom="20dp"
             android:text="Save" />
         <!--<LinearLayout
             android:gravity="center_horizontal"
