--- a/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
+++ b/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
@@ -75,28 +75,28 @@
         app:layout_constraintTop_toBottomOf="@+id/cv">
 
         <RelativeLayout
-            android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:padding="5dp">
 
             <TextView
-                android:textSize="12sp"
-                android:layout_marginLeft="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="2dp"
                 android:layout_toStartOf="@+id/imageView5"
                 android:text="@string/pick_time_n_date"
-                android:textColor="@color/gray" />
+                android:textColor="@color/gray"
+                android:textSize="12sp" />
 
             <ImageView
+                android:id="@+id/imageView5"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:layout_alignParentEnd="true"
-                android:background="@drawable/ic_menu_pickup_date_range"
-                android:id="@+id/imageView5" />
+                android:background="@drawable/ic_menu_pickup_date_range" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
@@ -133,13 +133,14 @@
 
     <Button
         android:id="@+id/btn_bookAppointment"
-
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="@string/book_reason_not_provided"
+        android:text="Processed to Payment"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
