--- a/app/src/main/res/drawable-v24/border_general_edit_text.xml
+++ b/app/src/main/res/drawable-v24/border_general_edit_text.xml
@@ -3,5 +3,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/gray"/>
+        android:color="@color/edit_text_border_color"/>
+    <corners android:radius="3dp"/>
 </shape>
