--- a/app/src/main/res/layout/frag_pt_profile.xml
+++ b/app/src/main/res/layout/frag_pt_profile.xml
@@ -9,26 +9,41 @@
 
 
         <Button
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:id="@+id/btn_PtPersonalInfoSave"
             style="@style/general_button_style"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="@dimen/margin_def"
-            android:text="@string/save" />
+            android:layout_marginBottom="30dp"
+            android:text="@string/save"
+            android:textAllCaps="false" />
 
         <EditText
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:textSize="12sp"
+            android:layout_marginBottom="10dp"
             android:id="@+id/edtPtFatherName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-
+            android:background="@drawable/border_general_edit_text"
             android:ems="10"
             android:hint="@string/father_name"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:padding="10dp" />
 
         <EditText
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+
+            android:textSize="12sp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/border_general_edit_text"
+            android:padding="10dp"
             android:id="@+id/edtPtMotherName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,95 +53,38 @@
             android:hint="@string/mother_name"
             android:inputType="textPersonName" />
 
-        <!--  <EditText
-              android:id="@+id/edtPtDeathOfBirth"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_alignParentEnd="true"
-
-              android:ems="10"
-              android:hint="DOB"
-              android:inputType="date" />-->
-        <RelativeLayout
-            android:id="@+id/rl"
-            style="@style/date_picker_container_style"
-
-
-            android:layout_below="@+id/edtPtMotherName"
-
-            >
-
-
-            <TextView
-                android:id="@+id/tvPatientDOB"
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:hint="@string/death_of_birth"
-
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/input_label_hint"
-                android:textSize="14sp" />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/tvPtAge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/rl"
-            android:layout_marginTop="17dp"
-            android:text="Age" />
-
         <EditText
-            android:id="@+id/edtPtPresentAddress"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+
+            android:textSize="12sp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/border_general_edit_text"
+            android:padding="10dp"
+            android:id="@+id/dob"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/tvPtAge"
-            android:layout_marginTop="5dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/edtPtMotherName"
             android:ems="10"
-            android:hint="@string/present_address"
+            android:hint="DD/MM/YYY"
             android:inputType="textPersonName" />
 
-        <ImageView
-            android:id="@+id/iv_doc_image_thumbel"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+        <EditText
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+
+            android:textSize="12sp"
+            android:background="@drawable/border_general_edit_text"
+            android:padding="10dp"
+            android:id="@+id/adress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/edtPtPresentAddress"
-
-            android:layout_marginStart="10dp"
-            android:background="@drawable/border_spinner"
-            android:src="@drawable/ic_if_file_doc" />
-
-        <ImageView
-            android:id="@+id/ivCamera"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_below="@+id/edtPtPresentAddress"
-            android:layout_marginBottom="79dp"
-            android:layout_marginStart="20dp"
-            android:layout_toEndOf="@+id/iv_doc_image_thumbel"
-            android:background="@drawable/border_spinner"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/ic_menu_camera" />
-
-        <ImageView
-            android:id="@+id/ivFolder"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_below="@+id/edtPtPresentAddress"
-            android:layout_marginBottom="79dp"
-            android:layout_marginStart="20dp"
-            android:layout_toEndOf="@+id/ivCamera"
-            android:background="@drawable/border_spinner"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/ic_folder_black_24dp" />
+            android:layout_below="@+id/dob"
+            android:ems="10"
+            android:hint="Present Adress"
+            android:inputType="textPersonName" />
 
     </RelativeLayout>
 
