--- a/app/src/main/res/layout/frag_pt_payment_module.xml
+++ b/app/src/main/res/layout/frag_pt_payment_module.xml
@@ -86,13 +86,29 @@
             android:textColor="@color/white" />
     </RelativeLayout>
 
+    <!--    <Spinner
+            android:id="@+id/spMobilePaymentWay"
+            android:layout_width="304dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
+    />-->
+
     <Spinner
         android:id="@+id/spMobilePaymentWay"
-        android:layout_width="304dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_toStartOf="@+id/edt_phoneNo"
+        android:background="@drawable/spinner"
+        android:paddingBottom="3dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="30dp"
+        android:paddingTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
