--- a/app/src/main/res/menu/activity_doc_home_drawer.xml
+++ b/app/src/main/res/menu/activity_doc_home_drawer.xml
@@ -33,11 +33,11 @@
             android:id="@+id/nav_doc_existing_patient"
             android:icon="@drawable/ic_menu_group"
             android:title="@string/doc_patientList" />
-
+<!--
         <item
             android:id="@+id/nav_doc_lab_report"
             android:icon="@drawable/ic_menu_report"
-            android:title="@string/doc_labReport" />
+            android:title="@string/doc_labReport" />-->
 
         <item
             android:id="@+id/nav_doc_health_feed"
