--- a/app/src/main/res/layout/activity_pt_appoint_book.xml
+++ b/app/src/main/res/layout/activity_pt_appoint_book.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pt_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    android:background="#ededed">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/appbar_layout" />
 
     <!--  <include
           android:id="@+id/toolbar"
@@ -20,14 +22,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.design.widget.NavigationView
+<!--    <android.support.design.widget.NavigationView
         android:id="@+id/pt_nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/pt_nav_header_home"
-        app:menu="@menu/activity_home2_drawer" />
+        app:menu="@menu/activity_home2_drawer" />-->
 
-</android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
 
