--- a/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
+++ b/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
@@ -35,6 +35,8 @@
         app:layout_constraintTop_toBottomOf="@+id/tvLabel">
 
         <EditText
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
             android:id="@+id/edtPatientDoctorAppointmentReason"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -68,8 +70,7 @@
         android:clickable="true"
         android:focusable="true"
         app:cardElevation="1dp"
-
-
+        app:cardBackgroundColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cv">
@@ -81,6 +82,7 @@
             android:padding="5dp">
 
             <TextView
+                android:id="@+id/reason_date_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -134,12 +136,13 @@
     <Button
         android:id="@+id/btn_bookAppointment"
         android:layout_width="match_parent"
-
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:background="@drawable/rounded_button_normal"
+        android:textColor="@color/white"
+        android:layout_height="40dp"
+        android:layout_marginBottom="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Processed to Payment"
+        android:text="Proceed to Payment"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
