payment page updates

--- a/app/src/main/res/layout/frag_pt_pickup_calander.xml
+++ b/app/src/main/res/layout/frag_pt_pickup_calander.xml
@@ -42,7 +42,7 @@
             android:id="@+id/btn_SaveAppointment"
             style="@style/general_button_style"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_below="@+id/recyVTime"
             android:layout_marginTop="@dimen/margin_def"
             android:layout_marginBottom="20dp"
