--- a/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
+++ b/app/src/main/res/layout/frag_pt_appoint_book_reason.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#ededed"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
@@ -109,9 +110,7 @@
         android:layout_margin="@dimen/margin_def"
         android:layout_marginTop="20dp"
         android:background="@color/white"
-        android:visibility="gone"
         app:cardElevation="1dp"
-        app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cv2">
@@ -122,7 +121,7 @@
             android:padding="0dp">
 
             <TextView
-
+                android:id="@+id/selected_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -139,7 +138,7 @@
         android:background="@drawable/rounded_button_normal"
         android:textColor="@color/white"
         android:layout_height="40dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Proceed to Payment"
