--- a/app/src/main/res/layout/frag_pt_view_doctor_profile.xml
+++ b/app/src/main/res/layout/frag_pt_view_doctor_profile.xml
@@ -113,10 +113,10 @@
         android:id="@+id/btn_appointBook"
         style="@style/general_button_style"
         android:layout_width="match_parent"
-
-        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/margin_def"
+        android:layout_marginBottom="20dp"
         android:layout_marginEnd="@dimen/margin_def"
         android:layout_marginStart="@dimen/margin_def"
         android:text="Appointment" />
