--- a/app/src/main/res/layout/fragment_doctor_home.xml
+++ b/app/src/main/res/layout/fragment_doctor_home.xml
@@ -6,21 +6,18 @@
     android:layout_height="match_parent"
     android:background="#ededed">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/appbar_layout" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        app:civ_border_width="3dp"
-        app:civ_border_color="@color/white"
-        app:civ_circle_background_color="@color/white"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
         android:id="@+id/ivDoctorCoverPic"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_below="@+id/toolbar"
-        android:src="@drawable/ic_doctor" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_doctor"
+        app:civ_border_color="@color/white"
+        app:civ_border_width="3dp"
+        app:civ_circle_background_color="@color/white" />
 
     <!--for the time being hide this view-->
     <!--    <TextView
@@ -37,14 +34,15 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/doc_card"
-        android:elevation="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ivDoctorCoverPic"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:cardBackgroundColor="@color/white"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/ivDoctorCoverPic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:elevation="2dp"
+        app:cardBackgroundColor="@color/white">
+
         <RelativeLayout
 
             android:layout_width="match_parent"
@@ -68,68 +66,46 @@
                 android:layout_alignBaseline="@+id/tvDocName"
                 android:layout_alignBottom="@+id/tvDocName"
                 android:layout_alignParentEnd="true"
-                android:text="23 voted"
                 android:layout_marginRight="10dp"
+                android:text="23 voted"
                 android:textColor="@color/colorPrimary"
                 android:textSize="11sp" />
 
             <TextView
-                android:textColor="@color/gray"
-                android:textSize="11sp"
                 android:id="@+id/doc_education"
-                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvDocName"
-                android:text="MD (CAD), MBS (USA)"/>
-            <TextView
-                android:textColor="@color/black"
-                android:textSize="11sp"
-                android:id="@+id/doc_type"
                 android:layout_marginLeft="10dp"
+                android:text="MD (CAD), MBS (USA)"
+                android:textColor="@color/gray"
+                android:textSize="11sp" />
+
+            <TextView
+                android:id="@+id/doc_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/doc_education"
-                android:text="Cardiology"/>
+                android:layout_marginLeft="10dp"
+                android:text="Cardiology"
+                android:textColor="@color/black"
+                android:textSize="11sp" />
+
             <android.support.design.widget.TabLayout
-                app:tabSelectedTextColor="@color/colorPrimaryDark"
-                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
-                android:layout_marginTop="8dp"
-                android:layout_below="@+id/doc_type"
                 android:id="@+id/tabs"
-                app:tabTextColor="@color/colorPrimary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/doc_type"
+                android:layout_marginTop="8dp"
                 app:tabGravity="fill"
-                app:tabMode="fixed" />
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="@color/colorPrimaryDark"
+                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+                app:tabTextColor="@color/colorPrimary" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 
-
-
-    <Button
-        android:id="@+id/btn_appointBook"
-        style="@style/general_button_style"
-        android:layout_width="match_parent"
-        android:textAllCaps="false"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="@dimen/margin_def"
-        android:layout_marginStart="@dimen/margin_def"
-        android:text="Appointment" />
-
-    <android.support.v4.view.ViewPager
-        android:layout_marginBottom="10dp"
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/btn_appointBook"
-        android:layout_below="@+id/doc_card"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
 </RelativeLayout>
-
 
