--- a/app/src/main/res/layout/doc_app_bar_home.xml
+++ b/app/src/main/res/layout/doc_app_bar_home.xml
@@ -13,6 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
         <!--android:layout_height="?attr/actionBarSize"-->
         <android.support.v7.widget.Toolbar
+            app:logo="@drawable/app_bar_logo"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/action_bar_height"
@@ -22,28 +23,15 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <ImageView
-        android:id="@+id/iv_doc_cover_pic"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_below="@+id/appbar"
-        android:src="@color/red" />
 
     <FrameLayout
+        android:layout_below="@+id/appbar"
         android:id="@+id/doc_content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/iv_doc_cover_pic">
+        android:layout_height="match_parent">
 
 
     </FrameLayout>
 
-    <!--   experiment to the video
-       <Button
-           android:layout_below="@+id/doc_content_frame"
-           android:id="@+id/btn_video"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="Button"
-           app:layout_behavior="" />-->
+
 </RelativeLayout>
