App Startup logo centered App logo without tagline Text changes in login signup

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
                 android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="30dp"
-                android:src="@drawable/newlogo" />
+                android:src="@drawable/newlogo_notag" />
 
             <EditText
                 android:id="@+id/edtPhone"
