--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -11,12 +11,12 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_centerInParent="true"
         android:layout_centerVertical="true"
-        android:layout_margin="80dp"
+        android:padding="80dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/app_logo"
-        app:srcCompat="@drawable/app_water_logo" />
+        app:srcCompat="@drawable/app_water_logo_trimmed" />
 
 </RelativeLayout>
 
